# carecircle

./: .dockerignore  .env.example  .gitattributes  .gitignore  .vercelignore  CONTRIBUTING.md  README.md  SECURITY.md  alerting.py  appointment_manager.py  async_pipeline.py  config.py  context_manager.py  crisis.py  crisis_runtime.py  daily_summary.py  db.py  db_observability.py  dependencies.py  doc_classifier.py  drug_resolver.py  extraction_engine.py  handlers.py  index.html  ingestion.py  intent.py  intent_embedding.py  intent_lock.py  intent_order.json  llm.py  llm_gateway.py  llm_policy.py  main.py  monitor_pharma_agent.py  nlp_deterministic.py  normalizer.py  notification_dispatcher.py  notifications.py  personalization.py  pharma_agent.py  (+22 more)
.github/workflows/: ci.yml
api/: index.py
carecircle/: __init__.py
carecircle/app/: __init__.py
docs/: ARCHITECTURE.md  BASELINE_REPORT.md  DATABASE.md  DEMO_VIDEO_SCENARIOS.md  DEMO_VIDEO_SCRIPT.md  INDEX.md  KNOWN_ISSUES.md  OPERATIONS.md  PROJECT_CONTEXT_MASTER.md  REPOSITORY_STRUCTURE.md  VERIFICATION.md  graphify.html
docs/audits/: PHARMA_AGENT_AUDIT.md  pharmaaudi2.md  test_findings.md
docs/operations/: PHARMA_AGENT_OPERATIONS.md
migrations/: README.md
scripts/: README.md
scripts/verify/: README.md  __init__.py  _bootstrap.py  run_baseline.py  verify_appointment_workflow.py  verify_confidence_contract.py  verify_document_pipeline.py  verify_hybrid_routing.py  verify_intent_routing.py  verify_layers_4_6.py  verify_pharma_agent.py  verify_pharma_live_tools.py  verify_structure_imports.py  (+2 more)
tests/: README.md
(+18 files in other folders)
